(travis: access public repos via https)

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,11 @@ jdk:
 
 git:
   depth: 1
+  submodules: false # Handle git submodules yourself
+before_install:
+  # Use sed to replace the SSH URL with the public URL, then initialize submodules
+  - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
+  - git submodule update --init --recursive
   
 script: 
   - cd muli-env
